# website-path-har

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: har-analyst.md  site-explorer.md
.claude/commands/: parse-har.md  plans.md  scan.md
.claude/rules/: browser-use-patterns.md  python-style.md  security.md
.claude/skills/browser-use-integration/: SKILL.md
.planning/: WEBSITE_PATH_HAR_MAPPER.md
src/pathhar/: __init__.py  cli.py  config.py
src/pathhar/engine/: __init__.py  asserter.py  custom_tools.py  discovery_agent.py  journey_agent.py  llm_factory.py
src/pathhar/models/: __init__.py  dom_snapshot.py  har_summary.py  journey.py  site_map.py
src/pathhar/orchestrator/: __init__.py  parallel.py  result_aggregator.py  service.py
src/pathhar/parsing/: __init__.py  endpoint_extractor.py  har_parser.py  schema_inferrer.py
tests/: conftest.py  test_asserter.py  test_cli.py  test_har_parser.py  test_orchestrator.py
