[project]
name = "pathhar"
version = "0.1.0"
description = "AI-powered website explorer that captures HAR files and maps API surfaces"
requires-python = ">=3.11"
dependencies = [
	"browser-use>=0.12.0",
	"pydantic-settings>=2.0",
	"click>=8.0",
]

[project.scripts]
pathhar = "pathhar.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pathhar"]

[tool.ruff]
indent-width = 4
target-version = "py311"
line-length = 120

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
